--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Robert Nguyen · Centre College · EDU 230</p>
+    <p class="footer-text">&copy; 2025 Robert Nguyen · Centre College · EDU 230</p>
   </footer>
 
   <script src="scripts.js"></script>
