--- a/index.html
+++ b/index.html
@@ -3,25 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EDU 230 — Service‑Leadership Portfolio</title>
+  <title>EDU 230 — Service‑Leadership Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
+  <!-- Add Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 <body>
   <header>
     <h1>Growing Through Service &amp; Leadership</h1>
-    <p>EDU 230 Culminating Project · Robert Nguyen · Spring 2025</p>
+    <p>EDU 230 Culminating Project · Robert Nguyen · Spring 2025</p>
+    <!-- Add animated decorative element -->
+    <div class="floating-shapes">
+      <div class="shape shape-1"></div>
+      <div class="shape shape-2"></div>
+      <div class="shape shape-3"></div>
+    </div>
   </header>
 
   <nav>
-    <a href="#outcome">Service Outcome</a>
-    <a href="#leadership">Leadership Growth</a>
-    <a href="#connections">Course Connections</a>
-    <a href="#future">Future Plans</a>
+    <a href="#outcome"><i class="fas fa-handshake"></i> Service Outcome</a>
+    <a href="#leadership"><i class="fas fa-chart-line"></i> Leadership Growth</a>
+    <a href="#connections"><i class="fas fa-book"></i> Course Connections</a>
+    <a href="#future"><i class="fas fa-road"></i> Future Plans</a>
   </nav>
 
   <!-- 1. SERVICE OUTCOME -->
   <section id="outcome">
-    <h2>Outcome of My Service‑Learning Project</h2>
+    <h2><i class="fas fa-handshake"></i> Outcome of My Service‑Learning Project</h2>
+    <!-- ...existing code... -->
     <p>
       Volunteering at the Art Center of the Bluegrass gave me the opportunity to support a wide range of tasks essential to community engagement. I covered front desk shifts where I welcomed visitors, answered questions about art exhibits, restocked flyers, and helped new guests fill out forms. During my time in the pottery department, I cleaned painting supplies, assisted in learning how to use the payment system, and observed customer interactions.
     </p>
@@ -51,7 +60,7 @@
 
   <!-- 2. LEADERSHIP DEVELOPMENT -->
   <section id="leadership">
-    <h2>How My Leadership Grew</h2>
+    <h2><i class="fas fa-chart-line"></i> How My Leadership Grew</h2>
     <p>
       When I first started volunteering, I thought leadership meant being the person in charge—speaking the most or making the biggest decisions. But I quickly realized that leadership can also mean being the person who listens first, who quietly helps things run smoothly, and who is present even when the work is invisible. 
     </p>
@@ -72,7 +81,7 @@
 
   <!-- 3. CONNECTIONS TO READINGS & DISCUSSIONS -->
   <section id="connections">
-    <h2>Connecting Practice to Course Readings</h2>
+    <h2><i class="fas fa-book"></i> Connecting Practice to Course Readings</h2>
 
     <p>
       The core concepts from EDU 230 didn’t just stay in the classroom—they came to life in every small act of service I performed. Paul Loeb’s idea that “we become leaders by doing, not by preparing forever” (p. 281) helped me stop overthinking whether I was ready to lead and instead just start showing up—consistently and sincerely.
@@ -103,7 +112,7 @@
 
   <!-- 4. FUTURE PLANS -->
   <section id="future">
-    <h2>Plans for the Future</h2>
+    <h2><i class="fas fa-road"></i> Plans for the Future</h2>
     <p>
       This course didn’t just change how I see leadership—it changed how I see my role in the world. I now understand that I don’t have to wait until I’m in a “big” position to lead. Presence, reliability, and care are the foundation. I want to carry this mindset into both my personal life and professional goals.
     </p>
