Enhance text styling for improved emphasis on key concepts in the portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Growing Through Service &amp; Leadership</h1>
+    <h1>Growing Through <strong>Service</strong> &amp; <strong>Leadership</strong></h1>
     <p>EDU 230 Culminating Project · Robert Nguyen · Spring 2025</p>
     <!-- Add animated decorative element -->
     <div class="floating-shapes">
@@ -21,21 +21,20 @@
   </header>
 
   <nav>
-    <a href="#outcome"><i class="fas fa-handshake"></i> Service Outcome</a>
-    <a href="#leadership"><i class="fas fa-chart-line"></i> Leadership Growth</a>
+    <a href="#outcome"><i class="fas fa-handshake"></i> <strong>Service</strong> Outcome</a>
+    <a href="#leadership"><i class="fas fa-chart-line"></i> <strong>Leadership</strong> Growth</a>
     <a href="#connections"><i class="fas fa-book"></i> Course Connections</a>
     <a href="#future"><i class="fas fa-road"></i> Future Plans</a>
   </nav>
 
   <!-- 1. SERVICE OUTCOME -->
   <section id="outcome">
-    <h2><i class="fas fa-handshake"></i> Outcome of My Service‑Learning Project</h2>
-    <!-- ...existing code... -->
+    <h2><i class="fas fa-handshake"></i> Outcome of My <strong>Service‑Learning</strong> Project</h2>
     <p>
-      Volunteering at the Art Center of the Bluegrass gave me the opportunity to support a wide range of tasks essential to community engagement. I covered front desk shifts where I welcomed visitors, answered questions about art exhibits, restocked flyers, and helped new guests fill out forms. During my time in the pottery department, I cleaned painting supplies, assisted in learning how to use the payment system, and observed customer interactions.
+      Volunteering at the Art Center of the Bluegrass gave me the opportunity to support a wide range of tasks essential to <strong>community engagement</strong>. I covered front desk shifts where I welcomed visitors, answered questions about art exhibits, restocked flyers, and helped new guests fill out forms. During my time in the pottery department, I cleaned painting supplies, assisted in learning how to use the payment system, and observed customer interactions.
     </p>
     <p>
-      On Family Fun Day, I supported over 100 children by helping them create bracelets and drawings. I also organized and hung more than 50 pieces of children’s art, transforming the space into a gallery of their creativity. Other times, I cleaned and organized the storage room—carefully handling over 75 handmade items like teddy bears, soaps, and decorative crafts to prepare the space for upcoming events.
+      On Family Fun Day, I supported over 100 children by helping them create bracelets and drawings. I also organized and hung more than 50 pieces of children’s art, transforming the space into a gallery of their <strong>creativity</strong>. Other times, I cleaned and organized the storage room—carefully handling over 75 handmade items like teddy bears, soaps, and decorative crafts to prepare the space for upcoming events.
     </p>
 
     <blockquote>
@@ -44,7 +43,7 @@
     </blockquote>
 
     <p>
-      These "small" actions taught me that leadership and service often happen behind the scenes. Loeb reminded me that these incremental efforts are the foundation of long-term change. By consistently showing up and giving my best to each task—whether organizing a space or supporting families—I contributed to the welcoming and inclusive spirit of the Art Center.
+      These "<strong>small</strong>" actions taught me that <strong>leadership</strong> and <strong>service</strong> often happen behind the scenes. Loeb reminded me that these incremental efforts are the foundation of long-term change. By consistently showing up and giving my best to each task—whether organizing a space or supporting families—I contributed to the welcoming and <strong>inclusive</strong> spirit of the Art Center.
     </p>
 
   <div class="gallery">
@@ -60,9 +59,9 @@
 
   <!-- 2. LEADERSHIP DEVELOPMENT -->
   <section id="leadership">
-    <h2><i class="fas fa-chart-line"></i> How My Leadership Grew</h2>
+    <h2><i class="fas fa-chart-line"></i> How My <strong>Leadership</strong> Grew</h2>
     <p>
-      When I first started volunteering, I thought leadership meant being the person in charge—speaking the most or making the biggest decisions. But I quickly realized that leadership can also mean being the person who listens first, who quietly helps things run smoothly, and who is present even when the work is invisible. 
+      When I first started volunteering, I thought <strong>leadership</strong> meant being the person in charge—speaking the most or making the biggest decisions. But I quickly realized that <strong>leadership</strong> can also mean being the person who listens first, who quietly helps things run smoothly, and who is present even when the work is invisible. 
     </p>
 
     <p>
@@ -70,12 +69,12 @@
     </p>
 
     <blockquote>
-      “Integrity is a fundamental consistency between one’s values, goals, and actions.”
+      “<strong>Integrity</strong> is a fundamental consistency between one’s values, goals, and actions.”
       <cite>Evans, <em>The Authentic Leader</em>, p. 137</cite>
     </blockquote>
 
     <p>
-      I learned to take initiative without waiting for direction—jumping in to restock materials, offering to help during events, or staying late to clean up when no one asked me to. These may seem like simple habits, but for me as a college student, they were huge steps in personal growth. I became more dependable, more self-aware, and more confident that I could lead by example.
+      I learned to take <strong>initiative</strong> without waiting for direction—jumping in to restock materials, offering to help during events, or staying late to clean up when no one asked me to. These may seem like simple habits, but for me as a college student, they were huge steps in personal <strong>growth</strong>. I became more dependable, more self-aware, and more confident that I could <strong>lead by example</strong>.
     </p>
   </section>
 
@@ -84,47 +83,47 @@
     <h2><i class="fas fa-book"></i> Connecting Practice to Course Readings</h2>
 
     <p>
-      The core concepts from EDU 230 didn’t just stay in the classroom—they came to life in every small act of service I performed. Paul Loeb’s idea that “we become leaders by doing, not by preparing forever” (p. 281) helped me stop overthinking whether I was ready to lead and instead just start showing up—consistently and sincerely.
+      The core concepts from EDU 230 didn’t just stay in the classroom—they came to life in every small act of <strong>service</strong> I performed. Paul Loeb’s idea that we become <strong>leaders by doing</strong>, not by preparing forever (p. 281) helped me stop overthinking whether I was ready to lead and instead just start showing up—consistently and sincerely.
     </p>
 
     <p>
-      One reading that especially stuck with me was Howard Gardner’s belief that “leadership is persuasion through example.” I wasn’t giving speeches or leading team meetings, but I was showing up early to set up, volunteering to clean up messy tables, and walking families through instructions with patience. My peers began to do the same without being asked, and that showed me that quiet leadership is still powerful.
+      I wasn’t giving speeches or leading team meetings, but I was showing up early to set up, volunteering to clean up messy tables, and walking families through instructions with patience. My peers began to do the same without being asked, and that showed me that <strong>quiet leadership</strong> is still powerful.
     </p>
 
     <blockquote>
-      “Leadership is communication in action. You cannot speak meaningfully in a leadership situation unless first you have listened and understood your audience.”
+      “<strong>Leadership</strong> is communication in action. You cannot speak meaningfully in a leadership situation unless first you have listened and understood your audience.”
       <cite>Neuschel, <em>The Servant Leader</em>, p. 78</cite>
     </blockquote>
 
     <p>
-      This quote echoed through every interaction I had with parents, staff, and especially kids. I remember one child who was too nervous to start their painting. Instead of jumping in with directions, I sat beside them and asked questions about what they liked to draw. By the end, they had filled a whole page. That simple moment reflected everything we discussed about authentic, responsive leadership.
+      This quote echoed through every interaction I had with parents, staff, and especially kids. I remember one child who was too nervous to start their painting. Instead of jumping in with directions, I sat beside them and asked questions about what they liked to draw. By the end, they had filled a whole page. That simple moment reflected everything we discussed about <strong>authentic</strong>, responsive <strong>leadership</strong>.
     </p>
 
     <blockquote>
-      “Being civic-minded is more than just what you know. It is what you do with what you know.”
+      “Being <strong>civic-minded</strong> is more than just what you know. It is what you do with what you know.”
       <cite>Cress et al., <em>Learning Through Serving</em>, p. 14</cite>
     </blockquote>
 
     <p>
-      This course made it clear that leadership and service are not separate. You lead by showing up, helping where it’s needed, and staying grounded in community. Each reflection journal, reading, and discussion shaped how I now approach leadership—as something rooted in action, humility, and purpose.
+      This course made it clear that <strong>leadership</strong> and <strong>service</strong> are not separate. You lead by showing up, helping where it’s needed, and staying grounded in <strong>community</strong>. Each reflection journal, reading, and discussion shaped how I now approach <strong>leadership</strong>—as something rooted in action, <strong>humility</strong>, and <strong>purpose</strong>.
     </p>
   </section>
 
   <!-- 4. FUTURE PLANS -->
   <section id="future">
-    <h2><i class="fas fa-road"></i> Plans for the Future</h2>
+    <h2><i class="fas fa-road"></i> Plans for the <strong>Future</strong></h2>
     <p>
-      This course didn’t just change how I see leadership—it changed how I see my role in the world. I now understand that I don’t have to wait until I’m in a “big” position to lead. Presence, reliability, and care are the foundation. I want to carry this mindset into both my personal life and professional goals.
+      This course didn’t just change how I see <strong>leadership</strong>—it changed how I see my role in the world. I now understand that I don’t have to wait until I’m in a “big” position to lead. <strong>Presence</strong>, <strong>reliability</strong>, and <strong>care</strong> are the foundation. I want to carry this mindset into both my personal life and professional goals.
     </p>
 
     <p>
-      As a Computer Science major, I want to merge technology with service. I hope to design software and educational tools that are accessible, especially for underserved students in my home country of Vietnam. I also plan to stay engaged locally—continuing to volunteer with community projects in Danville and mentoring fellow students through my campus organizations.
+      As a Computer Science major, I want to merge <strong>technology</strong> with <strong>service</strong>. I hope to design software and educational tools that are <strong>accessible</strong>, especially for underserved students in my home country of Vietnam. I also plan to stay engaged locally—continuing to volunteer with <strong>community</strong> projects in Danville and mentoring fellow students through my campus organizations.
     </p>
 
     <ol>
       <li>Create digital learning platforms for rural Vietnamese students with limited internet access.</li>
-      <li>Mentor first-year college students, especially international students navigating service and leadership roles.</li>
-      <li>Use software not just to solve problems—but to reflect values like inclusion, dignity, and empathy.</li>
+      <li>Mentor first-year college students, especially international students navigating <strong>service</strong> and <strong>leadership</strong> roles.</li>
+      <li>Use software not just to solve problems—but to reflect values like <strong>inclusion</strong>, <strong>dignity</strong>, and <strong>empathy</strong>.</li>
     </ol>
 
     <blockquote>
@@ -133,7 +132,7 @@
     </blockquote>
 
     <p>
-      EDU 230 helped me crawl—carefully, reflectively, and with purpose. Now I’m ready to walk.
+      EDU 230 helped me <strong>crawl</strong>—carefully, reflectively, and with <strong>purpose</strong>. Now I’m ready to <strong>walk</strong>.
     </p>
   </section>
 
